fix few paddings
Squashed commit of the following:

commit ba48c411de395197f83e37f7611ee28309681bdb
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 20 19:21:49 2023 +0300

    fix few paddings

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -276,7 +276,7 @@ footer > .mission {
 
 .search-form {
   margin: 0 0 2vw;
-  padding: 1.2vw 0 1.5vw 6.5vw;
+  padding: 1.2vw 0 1.2vw 6.5vw;
   border-radius: 0.3vw;
   box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.1);
   border: none;
@@ -289,7 +289,7 @@ footer > .mission {
 .product-form {
   margin: 0 0 2vw;
   color: #737373;
-  padding: 1.2vw 0 1.5vw 1.5vw;
+  padding: 1.2vw 0 1.2vw 1.5vw;
   border-radius: 0.3vw;
   box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.1);
   border: none;
